--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+
+
+<!--- draft of welcome page -->
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href = "styles.css">
+  </head>
+
+  <body>
+
+    <div id="all">
+      <h1>Welcome to CSM!</h1>
+      <div id="welcomeBox">
+        <label for="newEvent">Username: </label><br>
+        <input type="text" name="name" id="userName"><br>
+
+        <label for="startTime">Password:</label><br>
+        <input type="text" name="name" id="Password"><br>
+
+        <button id="log_in">Log In</button>
+        <button id="sign_up">Sign Up</button>
+      </div>
+
+      <script src="script.js"></script>
+      </div>
+  </body>
+</html>
+
 
